# python-plugin-template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TestConfig.yaml  db.sqlite  main.py  pyproject.toml
.github/workflows/: lint.yml  unittests.yml
docs/: overview.md
plugin/: __init__.py  plugin.py
plugin/client/: client.py
plugin/comics/: client.py
plugin/example/: client.py
plugin/tables/: __init__.py  comics.py  items.py
tests/: package.py
