[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Plaintextnerds <tim@plaintextnerds.com>"]
readme = "README.md"
packages = [{include = "plugin"}]

[tool.poetry.dependencies]
python = "<3.14"
cloudquery-plugin-sdk = "^0.1.39"
pydantic = "^2.4"
pyarrow = "^19.0.0"
requests = "^2.32.2"

[tool.poetry.scripts]
main = "main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

