[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Plaintextnerds <tim@plaintextnerds.com>"]
readme = "README.md"
packages = [{include = "plugin"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
cloudquery-plugin-sdk = ">=0.1.47"
pydantic = "^2.11.7"
pyarrow = "^19.0.1"
requests = "^2.32.5"

[tool.poetry.scripts]
main = "main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

